A>B & 42 taken into account. todo:Boolean output