@@ -1,16 +1,18 @@
 package dev.samiyc.npsolver.bean;
 
-import dev.samiyc.npsolver.service.EvaluationServiceUtil;
+import dev.samiyc.npsolver.service.EvaluationStaticService;
 
-import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Random;
+
+import static dev.samiyc.npsolver.service.MainService.GHOST_NODE_ALLOWED;
+import static dev.samiyc.npsolver.service.MainService.random;
 
 public class Node {
-    Random random = new Random();
-    private static final int MAX_OP = 8;
+    public static final int BACK_PROP_LOSS = 5;
+    private static final int MAX_OP = 9;
+
     public Node nodeA, nodeB;
     public int id, op;
     public double avgEval = 0.0;
@@ -18,8 +20,12 @@ public class Node {
     List<Integer> evals;
     List<Node> childs;
 
-    //New Input nodes
-    public Node(String s, int curId) {
+    /**
+     * New Input nodes
+     *
+     * @param curId
+     */
+    public Node(int curId) {
         id = curId;
         op = MAX_OP;
         outs = new ArrayList<>();
@@ -45,17 +51,15 @@ public class Node {
         nodeB.addChild(this);
     }
 
-
+    private void addChild(Node node) {
+        if (!GHOST_NODE_ALLOWED) childs.add(node);
+    }
 
     public static double calcAverage(List<Integer> numbers) {
         if (numbers.isEmpty()) return 0.0;
         int sum = 0;
         for (int number : numbers) sum += number;
         return (double) sum / numbers.size();
-    }
-
-    private void addChild(Node node) {
-        //childs.add(node); //FIXME !
     }
 
     private List<Integer> checkIds(List<Node> nodes) {
@@ -91,14 +95,15 @@ public class Node {
             outs.add(io.in.get(id));
         } else {
             Value a = nodeA.lastOut(), b = nodeB.lastOut();
-            if (op == 0) outs.add(a.add(b));   //A+B
-            if (op == 1) outs.add(a.inf(b));   //Supp & Inf
-            if (op == 2) outs.add(b.inf(a));
-            if (op == 3) outs.add(b.alternative(a));  //Replace 0 by
-            if (op == 4) outs.add(a.alternative(b));
-            if (op == 5) outs.add(a.mult(b));
-            if (op == 6) outs.add(a.minus(b));
-            if (op == 7) outs.add(b.minus(a));
+            if (op == 0) outs.add(a.add(b));
+            if (op == 1) outs.add(a.sup(b));
+            if (op == 2) outs.add(b.sup(a));
+            if (op == 3) outs.add(a.alternative(b));
+            if (op == 4) outs.add(b.alternative(a));
+            if (op == 5) outs.add(a.minus(b));
+            if (op == 6) outs.add(b.minus(a));
+            if (op == 7) outs.add(a.mult(b));
+            if (op == 8) outs.add(a.eq(b));
         }
     }
 
@@ -110,7 +115,7 @@ public class Node {
                 Value exp = map.get(i).out;
                 Value outDif = out.minus(lout), expDif = exp.minus(lexp);
 
-                evals.add(EvaluationServiceUtil.eval(out, exp, outDif, expDif));
+                evals.add(EvaluationStaticService.eval(out, exp, outDif, expDif));
                 lout = out;
                 lexp = exp;
             }
@@ -120,20 +125,19 @@ public class Node {
 
     public void backProp(List<Node> nodes) {
         if (isCompute() && asParent()) {
-            double lowerLimit = this.avgEval - 10;
+            double lowerLimit = this.avgEval - BACK_PROP_LOSS;
             List<Node> parents = Arrays.asList(this.nodeA, this.nodeB);
 
-            //Give credit to parents -10pts
-            for (Node n : parents)
-                if (n.isCompute() && n.avgEval < lowerLimit) {
-                    n.avgEval = lowerLimit;
-                    n.backProp(nodes);
-                }
-            //Better parent. remove the child...
-            for (Node n : parents)
-                if (n.avgEval > this.avgEval) {
+            for (Node p : parents) if (p.isCompute()) {
+                if (p.avgEval < lowerLimit) {
+                    //Give credit to parents
+                    p.avgEval = lowerLimit;
+                    p.backProp(nodes);
+                } else if (p.avgEval > avgEval) {
+                    //Better parent. remove the child(s)
                     prepareForDelete();
                 }
+            }
         }
     }
 
@@ -144,10 +148,10 @@ public class Node {
     }
 
     private void prepareForDelete() {
-        this.avgEval = 0.0;
+        avgEval = 0.0;
         nodeA = null;
         nodeB = null;
-        childs.forEach(n -> n.prepareForDelete());
+        childs.forEach(Node::prepareForDelete);
     }
 
     public void reset() {
@@ -159,14 +163,15 @@ public class Node {
 
     @Override
     public String toString() {
-        int ida = nodeA != null ? nodeA.id : 0;
-        int idb = nodeB != null ? nodeB.id : 0;
-        return "[id:" + id + " in:" + ida + " " + idb + " " + op + " ev:" + avgEval + "]";
+        String ida = nodeA != null ? Integer.toString(nodeA.id) : "N";
+        String idb = nodeB != null ? Integer.toString(nodeB.id) : "N";
+        String src_op = isInput() ? "---" : ida + " " + idb + " " + op;
+        return isCompute()&&avgEval==0?"_": id + "[" + src_op + "|" + outs.get(outs.size() - 2) + " " + lastOut() + "|" + avgEval + "]";
     }
 
     private Value lastOut() {
         if (outs.isEmpty()) return new Value();
-        return outs.get(outs.size() - 1);
+        return outs.getLast();
     }
 
     public boolean asParent() {
